{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 68,
  "lineage": "1ab5d78d-9868-4622-ab9a-e18768778edc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "liberty_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-011bcca8b6d63b21c",
            "arn": "arn:aws:ec2:ap-south-2:270840513334:instance/i-0128959f2a1cf93c4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0128959f2a1cf93c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "libertypoc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c39049deadf2b47a"
              }
            ],
            "primary_network_interface_id": "eni-0c39049deadf2b47a",
            "private_dns": "ip-10-0-1-36.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-18-60-42-197.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.60.42.197",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fdf33e8a29b4e270",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0566f8454bd5694b8",
            "tags": {
              "Name": "liberty-controller",
              "Role": "controller"
            },
            "tags_all": {
              "Name": "liberty-controller",
              "Role": "controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9f3b1e48861a4d0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "i-0128959f2a1cf93c4",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.liberty_sg",
            "aws_subnet.liberty_subnet",
            "aws_vpc.liberty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "liberty_member",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-011bcca8b6d63b21c",
            "arn": "arn:aws:ec2:ap-south-2:270840513334:instance/i-0a5ebe2fec3e96cba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5ebe2fec3e96cba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "libertypoc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ddf51098c9717cbf"
              }
            ],
            "primary_network_interface_id": "eni-0ddf51098c9717cbf",
            "private_dns": "ip-10-0-1-128.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.128",
            "public_dns": "ec2-40-192-105-138.ap-south-2.compute.amazonaws.com",
            "public_ip": "40.192.105.138",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08e47d21fa8bf2120",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0566f8454bd5694b8",
            "tags": {
              "Name": "liberty-member",
              "Role": "member"
            },
            "tags_all": {
              "Name": "liberty-member",
              "Role": "member"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9f3b1e48861a4d0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "i-0a5ebe2fec3e96cba",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.liberty_sg",
            "aws_subnet.liberty_subnet",
            "aws_vpc.liberty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "liberty_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:270840513334:internet-gateway/igw-06c007aa11c8562bc",
            "id": "igw-06c007aa11c8562bc",
            "owner_id": "270840513334",
            "region": "ap-south-2",
            "vpc_id": "vpc-0a43e0bc9edc822a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "igw-06c007aa11c8562bc",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.liberty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "liberty_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:270840513334:route-table/rtb-0c3442c8019437627",
            "id": "rtb-0c3442c8019437627",
            "owner_id": "270840513334",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c007aa11c8562bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a43e0bc9edc822a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "rtb-0c3442c8019437627",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.liberty_igw",
            "aws_vpc.liberty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liberty_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f68af35845d04a43",
            "region": "ap-south-2",
            "route_table_id": "rtb-0c3442c8019437627",
            "subnet_id": "subnet-0566f8454bd5694b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "rtbassoc-0f68af35845d04a43",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.liberty_igw",
            "aws_route_table.liberty_rt",
            "aws_subnet.liberty_subnet",
            "aws_vpc.liberty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liberty_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:270840513334:security-group/sg-0a9f3b1e48861a4d0",
            "description": "Allow Liberty console and app access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9f3b1e48861a4d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9060,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9060
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "liberty-sg",
            "name_prefix": "",
            "owner_id": "270840513334",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a43e0bc9edc822a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "sg-0a9f3b1e48861a4d0",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.liberty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liberty_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:270840513334:subnet/subnet-0566f8454bd5694b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0566f8454bd5694b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270840513334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "liberty-subnet"
            },
            "tags_all": {
              "Name": "liberty-subnet"
            },
            "vpc_id": "vpc-0a43e0bc9edc822a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "subnet-0566f8454bd5694b8",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.liberty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "liberty_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:270840513334:vpc/vpc-0a43e0bc9edc822a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093cfb79fb09db900",
            "default_route_table_id": "rtb-0fe200c83d839da7e",
            "default_security_group_id": "sg-04bed0d1c802ffba8",
            "dhcp_options_id": "dopt-007add1e90fdee3ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a43e0bc9edc822a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe200c83d839da7e",
            "owner_id": "270840513334",
            "region": "ap-south-2",
            "tags": {
              "Name": "liberty-vpc"
            },
            "tags_all": {
              "Name": "liberty-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "270840513334",
            "id": "vpc-0a43e0bc9edc822a5",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}